--- a/styles/index.css
+++ b/styles/index.css
@@ -20,10 +20,10 @@ body {
     /* background-size: auto; */
 }
 
-.placeholder {
+/* .page-top {
     width:100%;
     height:10vh;
-}
+} */
 
 nav{
     position: fixed;
@@ -102,10 +102,15 @@ nav a{
 }
 
 .pagejumper {
-    /* position: absolute; */
+    position: relative;
     height:10vh;
-    bottom:0;
+    bottom:10vh;
+    /* background-color: black; */
 }
+
+/* .test {
+    height:100%
+} */
 
 /* @media only screen and (max-width: 1136px) {
     body {
@@ -128,7 +133,7 @@ nav a{
     background-repeat: no-repeat;
     background-position: center center;
     padding: 30px;
-    height:90vh;
+    height:100%;
   }
   .title-label {
     color: gray;
