--- a/styles/index.css
+++ b/styles/index.css
@@ -139,23 +139,26 @@ nav a{
     background-position: center center;
     padding: 30px;
     height:100%;
-  }
+}
 
-  .profile-avatar {
-      border-radius: 50%;
-      border: 30px aliceblue solid;
-      width:400px;
-  }
+.profile-avatar {
+    border-radius: 50%;
+    border: 30px aliceblue solid;
+    width:400px;
+}
 
-  .title-label {
-    color: gray;
-    font-size: 20px;
-  }
+.title-label {
+color: gray;
+font-size: 20px;
+}
 
-  
-  .text-component h1 {
-      font-size: 40px;
-    }
+.text-component {
+    padding:0 80px;
+}
+
+.text-component h1 {
+    font-size: 40px;
+}
 
 .projects-container {
     display:flex;
@@ -205,13 +208,27 @@ nav a{
     text-align: center;  */
 }
 
+.project-desc {
+    height:150px;
+    padding:20px;
+    text-align: center;
+}
+
+.project-links {
+    display:flex;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 230px;
+    height: 50px;
+}
+
 .project-button {
-    width:200px;
-    height:100px;
+    width:100px;
+    height:50px;
 }
 
 .project-container:hover .project-image {
-    opacity: 0.3;
+    opacity: 0.2;
 }
 
 .project-container:hover .project-hover {
