--- a/styles/index.css
+++ b/styles/index.css
@@ -98,11 +98,12 @@ nav a{
     background-color:salmon;
 }
 .page3 {
-    height:120vh;
+    height:150vh;
     background-color:lavender;
 }
 .page4 {
     background-color:lightgray;
+    display:flex;
 }
 
 .pagejumper {
@@ -243,6 +244,35 @@ font-size: 20px;
     opacity: 1;
 }
 
+.page4-container {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.half-page {
+    height: 100%;
+    width: 100%;
+}
+
+.skills-container {
+    background-color: antiquewhite;
+    display:inline-block;
+    padding: 30px;
+    /* flex-direction: column; */
+    /* overflow: wrap; */
+}
+
+.contact-container {
+    background-color: beige;
+}
+
+.fab, .fas {
+    /* height:96px; */
+    padding:30px;
+}
+
 .icons-js {
     color:green;
 }
@@ -257,7 +287,11 @@ font-size: 20px;
 } */
 
 
-
+@media only screen and (min-width: 321px) {
+    .page3 {
+        height:120vh;
+    }
+}
 
 @media only screen and (min-width: 376px) {
     .title-container {
@@ -284,6 +318,15 @@ font-size: 20px;
     .text-component p {
         font-size: 30px;
     }
+    .page4-container {
+        flex-direction: row;
+    }
+    .half-page {
+        height: 100%;
+        width: 50%;
+    }
+
+
 }
 
 /* @media only screen and (min-height: 813px) {
