--- a/styles/index.css
+++ b/styles/index.css
@@ -6,6 +6,7 @@
 html{
     box-sizing: border-box;
     background-color: black;
+    font-family: 'Open Sans', sans-serif;
 }
 
 *,*::before,*::after{
