Added contact icons.  Added anchors to github, email, and linkedin.

--- a/styles/index.css
+++ b/styles/index.css
@@ -278,6 +278,15 @@ font-size: 20px;
     color:green;
 }
 
+.contact-icon {
+    padding: 40px;
+}
+
+.contact-container a{
+    color:black;
+    text-decoration: none;
+}
+
 
 /*
 .project-text {
