--- a/styles/index.css
+++ b/styles/index.css
@@ -248,6 +248,8 @@ font-size: 20px;
     opacity: 1;
 }
 
+
+
 .page4-container {
     width: 100%;
     height: 100%;
@@ -262,9 +264,11 @@ font-size: 20px;
 
 .skills-container {
     background-color: antiquewhite;
-    display:inline-block;
+    display: flex;
+    flex-direction: column;
     padding: 30px;
     text-align: center;
+    /* line-height: 20px */
     /* flex-direction: column; */
     /* overflow: wrap; */
 }
@@ -274,6 +278,18 @@ font-size: 20px;
     display:inline-block;
     padding: 30px;
     text-align: center;
+}
+
+.skill-card-container {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: center;
+}
+.skill-card {
+    width: 90px;
+    height: 90px;
+    margin: 10px;
 }
 
 .fab, .fas {
@@ -305,7 +321,7 @@ font-size: 20px;
 
 .skill-icon {
     font-size: 60px;
-    padding: 20px;
+    /* padding: 20px; */
     color: green;
 }
 
@@ -339,7 +355,7 @@ font-size: 20px;
         height:90vh;
     }
     .page4 {
-        height:90vh;
+        height:95vh;
     }
     .projects-container {
         flex-direction: row;
@@ -365,6 +381,24 @@ font-size: 20px;
     }
 
 }
+
+/* @media only screen and (min-width: 1024px) { 
+    .project-container {
+        width: 500px;
+        height:500px;
+    }
+    .project-middle {
+        width: 400px;
+        height: 400px;
+    }
+    .project-image {
+        width: 400px;
+        height:400px;
+    }
+    .project-header {
+        font-size: 40px;
+    }
+} */
 
 /* @media only screen and (min-height: 813px) {
     .page3 {
