--- a/styles/index.css
+++ b/styles/index.css
@@ -106,7 +106,7 @@ nav a{
     background-color:salmon;
 }
 .page3 {
-    height:150vh;
+    height:130vh;
     background-color:lavender;
 }
 .page4 {
@@ -204,9 +204,9 @@ font-size: 20px;
     display:flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    /* justify-content: center; */
     width: 300px;
-    height:300px;
+    height: 400px;
     /* overflow:hidden; */
 }
 
@@ -218,6 +218,24 @@ font-size: 20px;
     /* display:block; */
     transition: 0.5s ease;
     /* backface-visibility: hidden; */
+}
+
+.project-skills-container {
+    width: 230px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    margin: 5px;
+}
+
+.project-skill-card {
+    
+}
+
+.project-skill-icon {
+    font-size: 40px;
+    padding: 10px;
+    color: rgb(0,91, 255); 
 }
 
 .project-middle {
