--- a/styles/index.css
+++ b/styles/index.css
@@ -175,6 +175,9 @@ font-size: 20px;
 #feature-text {
     font-size: 30px;
 }
+#regular-text {
+    font-size: 16px;
+}
 #feature-name {
     font-size: 60px;
 }
