--- a/styles/index.css
+++ b/styles/index.css
@@ -14,7 +14,7 @@ html{
 }
 
 body {
-    /* background-color: aliceblue; */
+    background-color: gray;
     display:flex;
     flex-direction: column;
     margin:0;
@@ -36,8 +36,9 @@ nav{
     display:flex;
     background-color:gray;
     justify-content:space-between;
+    align-items: center;
     width:100%;
-    height:10%;
+    /* height:10%; */
     padding:10px 20px;
     z-index: 5;
     flex-direction: column;
@@ -61,7 +62,13 @@ ul{
 nav a{
     color:white;
     text-decoration: none;
+    /* padding: 25px; */
 }
+
+.nav-links a {
+    padding: 25px;
+}
+
 
 .main-box {
     width:40%;
@@ -154,15 +161,15 @@ nav a{
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
-    padding: 30px;
+    padding: 30px 30px 30px 30px;
     height:100%;
 }
 
 .profile-avatar {
     border-radius: 50%;
     border: 20px aliceblue solid;
-    /* width:300px; */
-    /* height:300px; */
+    width:300px;
+    height:300px;
 }
 
 .title-label {
@@ -435,18 +442,19 @@ font-size: 20px;
 @media only screen and (min-width: 650px) {
     .title-container {
         flex-direction: row;
+        /* padding: 10px; */
     }
     .profile-avatar {
         border-radius: 50%;
         border: 30px aliceblue solid;
-        width: 400px;
-        /* height: 400px; */
+        width: 350px;
+        height: 350px;
     }
     .title-container .container {
         width:50%;
     }   
     .page3 {
-        height:90vh;
+        /* height:90vh; */
     }
     .page4 {
         /* height:120vh; */
@@ -471,9 +479,11 @@ font-size: 20px;
         flex-direction: row;
     }
     li {
-        padding:25px;
+        padding: 25px;
     }
-
+    .nav-title {
+        font-size: 16px;
+    }
 }
 
 @media only screen and (min-width: 795px) {
