--- a/styles/index.css
+++ b/styles/index.css
@@ -208,6 +208,9 @@ font-size: 20px;
     width: 60%;
 }
 
+.page2 .text-component {
+    text-align: center;
+}
 .page3 .text-component {
     text-align: center;
 }
@@ -228,7 +231,7 @@ font-size: 20px;
     align-items: center;
     /* justify-content: center; */
     width: 300px;
-    height: 500px;
+    height: 550px;
     /* overflow:hidden; */
 }
 
@@ -427,7 +430,7 @@ font-size: 20px;
 .skill-icon:hover {
     filter: invert(100%);
 }
-.project-skill-card .skill-icon2 {
+.project-skill-icon2 {
     font-size: 10px;
     /* padding: 20px; */
     color: rgb(0,91, 255); 
