--- a/styles/index.css
+++ b/styles/index.css
@@ -321,11 +321,11 @@ font-size: 20px;
     height:50px;
 }
 
-.project-container:hover .project-image {
+.project-container:hover .project-image, .project-container .project-image {
     opacity: 0.2;
 }
 
-.project-container:hover .project-hover {
+.project-container:hover .project-hover, .project-container .project-hover {
     opacity: 1;
 }
 
@@ -450,7 +450,7 @@ font-size: 20px;
     color: rgb(0,91, 255); 
 }
 
-.skill-icon2:hover {
+.skill-icon2:hover, .skill-icon2-alt:hover{
     filter: invert(100%);
 }
 .contact-icon:hover {
