--- a/styles/index.css
+++ b/styles/index.css
@@ -321,6 +321,8 @@ font-size: 20px;
     height:50px;
     border-radius: 20px;
     border: black solid 1px;
+    background-color: rgba(230, 230, 230);
+    box-shadow: 2px 2px 2px gray;
 }
 
 .project-container:hover .project-image, .project-container .project-image {
