--- a/styles/index.css
+++ b/styles/index.css
@@ -320,13 +320,13 @@ font-size: 20px;
     width:100px;
     height:50px;
     border-radius: 20px;
-    border: black solid 1px;
+    border: gray solid 1px;
     background-color: rgba(230, 230, 230);
-    box-shadow: 2px 2px 2px gray;
+    box-shadow: 1px 1px 1px gray;
 }
 
 .project-container:hover .project-image, .project-container .project-image {
-    opacity: 0.2;
+    opacity: 0.1;
 }
 
 .project-container:hover .project-hover, .project-container .project-hover {
