--- a/styles/index.css
+++ b/styles/index.css
@@ -323,6 +323,7 @@ font-size: 20px;
     border: gray solid 1px;
     background-color: rgba(230, 230, 230);
     box-shadow: 1px 1px 1px gray;
+    outline: none;
 }
 
 .project-container:hover .project-image, .project-container .project-image {
@@ -391,6 +392,7 @@ font-size: 20px;
     display: flex;
     justify-content: center;
     align-items: center;
+    outline: none;
 }
 .contact-card {
     width: 150px;
