--- a/styles/index.css
+++ b/styles/index.css
@@ -116,6 +116,9 @@ nav a{
 
 .page1 {
     min-height: 100vh;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
 }
 
 .page2 {
@@ -164,11 +167,9 @@ nav a{
     justify-content: space-evenly;
     /* background-color: green; */
     min-height: 100vh;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center center;
     padding: 30px 30px 30px 30px;
     height:100%;
+    background-color: rgba(255,255,255,0.3);
 }
 
 .profile-avatar {
