--- a/styles/index.css
+++ b/styles/index.css
@@ -250,6 +250,8 @@ font-size: 20px;
     /* display: block; */
     transition: 0.5s ease;
     /* backface-visibility: hidden; */
+
+    box-shadow: 10px 10px 10px black;
 }
 
 .page2 .project-skills-container {
@@ -329,6 +331,10 @@ font-size: 20px;
     background-color: rgba(230, 230, 230);
     box-shadow: 1px 1px 1px gray;
     outline: none;
+}
+
+.project-button:hover {
+    cursor: pointer;
 }
 
 .project-container:hover .project-image, .project-container .project-image {
@@ -442,9 +448,9 @@ font-size: 20px;
     color: rgb(0,91, 255); 
 }
 
-.skill-icon:hover {
+/* .skill-icon:hover {
     filter: invert(100%);
-}
+} */
 .project-skill-icon2 {
     font-size: 10px;
     /* padding: 20px; */
