--- a/styles/index.css
+++ b/styles/index.css
@@ -534,9 +534,17 @@ font-size: 20px;
     }
     nav {
         flex-direction: row;
+        /* padding: 25px 0; */
     }
+    .nav-links li {
+        width: 30%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
     li {
-        padding: 25px;
+        /* padding: 25px; */
     }
     .nav-title {
         font-size: 16px;
