--- a/styles/index.css
+++ b/styles/index.css
@@ -69,8 +69,8 @@ nav a{
     /* padding: 25px; */
 }
 
-.nav-links a {
-    padding: 25px;
+.nav-links a, .nav-title a {
+    padding: 0 25px;
 }
 
 
@@ -536,18 +536,29 @@ font-size: 20px;
         flex-direction: row;
         /* padding: 25px 0; */
     }
+    .nav-title {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
     .nav-links li {
         width: 30%;
         display: flex;
         align-items: center;
         justify-content: center;
     }
-
     li {
+        border-bottom: transparent 2px solid;
+    }
+    li:hover {
         /* padding: 25px; */
+        border-bottom: cadetblue 2px solid;
     }
     .nav-title {
         font-size: 16px;
+    }
+    .nav-links a, .nav-title a {
+        padding: 25px;
     }
 }
 
