--- a/styles/index.css
+++ b/styles/index.css
@@ -5,8 +5,10 @@
 
 html{
     box-sizing: border-box;
-    background-color: black;
+    background-color: hsl(0, 0%, 13%);
     font-family: 'Open Sans', sans-serif;
+    /* color: green; */
+    color: hsl(0, 0%, 13%);
 }
 
 *,*::before,*::after{
@@ -240,7 +242,8 @@ font-size: 20px;
     width: 300px;
     height: 550px;
     /* overflow:hidden; */
-    border: 1px solid rgba(0, 0, 0, 0.1);
+    /* border: 1px solid rgba(0, 0, 0, 0.1); */
+    /* background-color: hsl(240, 67%, 92%); */
     margin: 10px;
 }
 
@@ -411,7 +414,7 @@ font-size: 20px;
 .contact-card {
     width: 150px;
     height: 150px;
-    margin: 5px;
+    margin: 15px;
 }
 .contact-card p {
     /* padding:0; */
@@ -432,7 +435,7 @@ font-size: 20px;
 }
 
 .contact-container a{
-    color:black;
+    color:hsl(0, 0%, 13%);
     text-decoration: none;
 }
 
@@ -475,7 +478,7 @@ font-size: 20px;
 }
 .contact-icon:hover {
     /* filter: invert(100%); */
-    background-color: black;
+    background-color: hsl(0, 0%, 13%);;
     color: beige;
 }
 
@@ -518,6 +521,7 @@ font-size: 20px;
     .projects-container {
         flex-direction: row;
         flex-wrap: wrap;
+        padding-bottom: 50px;
     }
     .text-component h1 {
         font-size: 60px;
